--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <style>
             .container{
                 width: 600px;
+                align-self: auto
                 margin: 25px auto;
             }
             textarea,input{
@@ -17,6 +18,8 @@
     </head>
     <body>
         <div>
+        
+            Nimi: <input type="text" id="chat_name"/><br/><br/>
             <textarea id="messages"></textarea><br/>
             <input type="text" id="chat_message"/><br/>
             <input type="button" id="send" value="Send"/>
